fixbug: message plain text overlap content

--- a/assembl/static/css/components/_message.scss
+++ b/assembl/static/css/components/_message.scss
@@ -177,6 +177,7 @@ $previewNumLines: 4;
   &.viewStyleFullBody {
     /* FullBody specific styles */
     .message-body.body_format_text_plain {
+      word-wrap: break-word;// avoid overlap content
       white-space: pre-line;
       & > {
         white-space: normal;
